# mcp-hackathon

./: Makefile  README.md  main.py  pyproject.toml
